--- a/config/database.yml
+++ b/config/database.yml
@@ -15,6 +15,8 @@
 # gem 'pg'
 #
 default: &default
+  username: manager
+  password: manager123
   adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see rails configuration guide
